# kb-mcp

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SETUP-FRIEND.md  SETUP-LOCAL.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
deploy/cloudflared/: RUNBOOK.md  config.example.yml
deploy/ngrok/: RUNBOOK.md
docs/: capabilities.md  deployment.md  ranking-tuning.md  release.md  remote-checklist.md  vault-consolidation-migration.md
examples/sample-vault/: README.md
examples/sample-vault/Knowledge Base/: index.md  log.md
examples/sample-vault/Knowledge Base/Entities/Concepts/: Local First Knowledge.md
examples/sample-vault/Knowledge Base/Notes/Insights/: retrieval-needs-owned-files.md
examples/sample-vault/Knowledge Base/Sources/Sessions/: 2026-06-30-sample-session.md
examples/sample-vault/Knowledge Base/_Schema/: SKILL.md  project-keys.yaml
openspec/: config.yaml
openspec/changes/add-attention-queue/: design.md  proposal.md
openspec/changes/add-attention-queue/specs/attention-queue/: spec.md
openspec/changes/add-context-packs/: design.md  proposal.md  tasks.md
openspec/changes/add-context-packs/specs/context-packs/: spec.md
openspec/changes/add-named-speaker-diarization/: design.md  proposal.md  tasks.md
openspec/changes/add-named-speaker-diarization/specs/speaker-diarization/: spec.md
openspec/changes/archive/2026-06-28-add-named-speaker-diarization/: tasks.md
openspec/changes/archive/2026-06-28-close-auto-tune-loop/: tasks.md
openspec/changes/archive/2026-06-28-order-contradiction-queue/: tasks.md
openspec/changes/archive/2026-06-28-unify-command-surface/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-add-attention-queue/: tasks.md
openspec/changes/archive/2026-06-30-improve-install-readiness/: design.md  proposal.md  tasks.md
openspec/changes/close-auto-tune-loop/: design.md  proposal.md  tasks.md
openspec/changes/close-auto-tune-loop/specs/ranking-autotune/: spec.md
openspec/changes/complete-oss-readiness/: design.md  proposal.md  tasks.md
openspec/changes/complete-oss-readiness/specs/install-readiness/: spec.md
openspec/changes/diarization-cpu-sidecar/: design.md  proposal.md  tasks.md
openspec/changes/diarization-cpu-sidecar/specs/speaker-diarization/: spec.md
openspec/changes/find-speaker-filter/: design.md  proposal.md  tasks.md
openspec/changes/find-speaker-filter/specs/speaker-diarization/: spec.md
openspec/changes/image-zero-shot-tags/: design.md  proposal.md  tasks.md
openspec/changes/image-zero-shot-tags/specs/image-tags/: spec.md
openspec/changes/improve-find-latency-token-cost/: tasks.md
openspec/changes/order-contradiction-queue/: design.md  proposal.md
openspec/changes/unify-command-surface/: design.md  proposal.md  tasks.md
openspec/changes/unify-command-surface/specs/command-surface/: spec.md
openspec/specs/attention-queue/: spec.md
openspec/specs/command-surface/: spec.md
openspec/specs/context-packs/: spec.md
openspec/specs/contradiction-queue/: spec.md
openspec/specs/image-tags/: spec.md
openspec/specs/install-readiness/: spec.md
openspec/specs/ranking-autotune/: spec.md
openspec/specs/speaker-diarization/: spec.md
scripts/: analyze_tool_surface.py  auto_tune_ranking.py  com.kb-mcp.plist  derive_relevance_pairs.py  dump-tool-schemas.py  eval_retrieval.py  fix_wikilink_residuals.py  genericize-schema.py  grant-no-uac.ps1  install-service.ps1  install-service.sh  kb-mcp.service  mint-upload-token.py  normalize_vault_wikilinks.py  preview_normalize_diff.py  rebuild-schema-zip.ps1  rebuild-schema-zip.py  rebuild-schema-zip.sh  restart.ps1  restart.sh  set-upload-token.py  setup-cloudflared.ps1  setup-diarizer.ps1  smoke-media-pipeline.py  smoke-sample-vault.py  smoke-upload.py  verify-media-gpu.py
scripts/generic/: project-keys.yaml
sidecar/diarizer/: pyproject.toml  worker.py
src/kb_mcp/: __main__.py  access.py  add.py  append_to_file.py  attention.py  audit.py  audit_fix.py  backfill.py  bm25.py  cf_access.py  cli_ops.py  commands.py  compile_proposal.py  context_pack.py  corpus_aware.py  create_directory.py  create_file.py  delete_directory.py  delete_file.py  edit.py  embeddings.py  eval_metrics.py  extract.py  file_watcher.py  find.py  fusion.py  get_frontmatter.py  get_page.py  guards.py  image_tags.py  indexes.py  init.py  install_hook.py  install_skill.py  link.py  list_directory.py  list_inbound_links.py  list_trash.py  logging_config.py  media_worker.py  (+20 more)
src/kb_mcp/_hooks/: kb-capture-nudge.sh  kb-retrieve-nudge.sh  kb_capture_nudge.py  kb_retrieve_nudge.py
src/kb_mcp/_scaffold/: index.md  log.md
src/kb_mcp/_scaffold/Entities/: index.md
src/kb_mcp/_scaffold/Notes/: index.md
src/kb_mcp/_scaffold/Sources/: index.md
src/kb_mcp/_scaffold/_Schema/: SKILL.md
tests/: conftest.py  test_access.py  test_add.py  test_attention.py  test_audit.py  test_audit_contradiction_order.py  test_audit_distillation.py  test_audit_fix.py  test_audit_overhaul.py  test_auth_cache.py  test_auto_tune.py  test_backfill.py  test_cf_access.py  test_cli_core_ops.py  test_cli_ops.py  test_clip.py  test_compile_proposal.py  test_consolidated_tools.py  test_context_pack.py  test_corpus_aware.py  test_derive_relevance_pairs.py  test_diarizer_sidecar.py  test_diarizer_worker_smoke.py  test_download_endpoint.py  test_drift_guard.py  test_edit_surgical_replace.py  test_edit_validate_only.py  test_eval_metrics.py  test_extract.py  test_file_watcher.py  test_find.py  test_find_hot_cache.py  test_find_timings_compact.py  test_get_edit_roundtrip.py  test_guards.py  test_hybrid_search.py  test_image_tags.py  test_init.py  test_install_hook.py  test_install_skill.py  (+33 more)
tests/fixtures/: mcp_tool_schemas.json
tests/fixtures/Cognitive Core/: sample-curated.md
tests/fixtures/Knowledge Base/: index.md  log.md
tests/fixtures/Knowledge Base/Sources/: index.md
tests/fixtures/Knowledge Base/_Schema/: SKILL.md
tests/fixtures/Reference/: sample-curated.md
tests/golden/: queries.yaml
(+24 files in other folders)
