[project]
name = "kb-mcp"
version = "0.1.0"
description = "Self-hosted MCP server exposing Hugo's Obsidian Knowledge Base to mobile claude.ai"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Hugo Anderson", email = "hugoander@gmail.com" }]

dependencies = [
    "fastmcp>=2.10",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.7",
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "torch>=2.12",
    "snowballstemmer>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kb_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

# Blackwell (RTX 50-series, sm_120 / compute capability 12.0) needs CUDA wheels.
# Default PyPI torch on Windows is STILL CPU-only (verified 2026-05 against uv's
# PyTorch integration guide), so an explicit CUDA index is required to get a GPU
# build on Windows. The cu132 (CUDA 13.2) wheel ships sm_120 —
# `torch.cuda.get_arch_list()` includes it, so any RTX 50-series GPU works.
#
# The platform marker scopes the CUDA index to win32/linux; other platforms (e.g.
# macOS) fall back to default PyPI. We deliberately do NOT use
# `UV_TORCH_BACKEND=auto`: it resolves per-machine at install time, which would
# break lockfile reproducibility across the desktop + laptop hosts — the explicit
# pinned index keeps both boxes on the same wheel. `explicit = true` keeps this
# index out of general resolution. Multi-host GPU bring-up is documented in README.
[tool.uv.sources]
torch = [
  { index = "pytorch-cu132", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
